rest api: 2 new endpoints + removing stale metrics (caused by pod restarts -> diff pod name label)
